Add login with Bootstrap

--- a/src/app/login/register/register.html
+++ b/src/app/login/register/register.html
@@ -2,7 +2,7 @@
   <div class="card p-4 shadow login-card">
 
     <h3 class="text-center fw-bold mb-4">
-      LOGIN PAGE
+      Create Account
     </h3>
 
     <form>
@@ -16,18 +16,18 @@
         <input type="password" class="form-control">
       </div>
 
-      <button class="btn btn-primary w-100 mb-3">
-        Đăng nhập
+      <div class="mb-3">
+        <label>Confirm Password</label>
+        <input type="password" class="form-control">
+      </div>
+
+      <button class="btn btn-success w-100 mb-3">
+        Register
       </button>
     </form>
 
     <div class="text-center">
-      <a routerLink="/forgot-password" class="d-block mb-2">
-        Quên mật khẩu
-      </a>
-      <a routerLink="/register">
-        Tạo tài khoản mới
-      </a>
+      <a routerLink="/login">Back to login</a>
     </div>
 
   </div>
