--- a/src/app/login/forgot-password/forgot-password.html
+++ b/src/app/login/forgot-password/forgot-password.html
@@ -2,7 +2,7 @@
   <div class="card p-4 shadow login-card">
 
     <h3 class="text-center fw-bold mb-4">
-      LOGIN PAGE
+      Forgot Password
     </h3>
 
     <form>
@@ -11,23 +11,13 @@
         <input type="email" class="form-control">
       </div>
 
-      <div class="mb-3">
-        <label>Password</label>
-        <input type="password" class="form-control">
-      </div>
-
-      <button class="btn btn-primary w-100 mb-3">
-        Đăng nhập
+      <button class="btn btn-warning w-100 mb-3">
+        Reset Password
       </button>
     </form>
 
     <div class="text-center">
-      <a routerLink="/forgot-password" class="d-block mb-2">
-        Quên mật khẩu
-      </a>
-      <a routerLink="/register">
-        Tạo tài khoản mới
-      </a>
+      <a routerLink="/login">Back to login</a>
     </div>
 
   </div>
