--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,15 @@
-<!-- dashboard.component.html -->
+<div class="dashboard-layout">
+  <!-- HEADER -->
+  <app-header></app-header>
 
+  <!-- BODY -->
+  <div class="dashboard-body">
+    <!-- SIDEBAR -->
+    <app-sidebar></app-sidebar>
 
-<app-header></app-header>
-
-<router-outlet></router-outlet>
-
-
+    <!-- CONTENT -->
+    <main class="dashboard-content">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+</div>
