--- a/src/app/dashboard/layout/sidebar.component.html
+++ b/src/app/dashboard/layout/sidebar.component.html
@@ -7,7 +7,7 @@
     📦 Sản phẩm
   </a>
 
-  <a routerLink="/dashboard/cart" routerLinkActive="active">
+  <a routerLink="/dashboard/orders" routerLinkActive="active">
     🛒 Giỏ hàng
   </a>
 </aside>
