--- a/src/app/dashboard/layout/header.component.html
+++ b/src/app/dashboard/layout/header.component.html
@@ -21,7 +21,7 @@
     </a>
 
     <a routerLink="/dashboard/orders" routerLinkActive="active">
-      Đơn hàng
+      Giỏ hàng
     </a>
     
   </nav>
