--- a/src/app/dashboard/pages/products/products.component.html
+++ b/src/app/dashboard/pages/products/products.component.html
@@ -1,52 +1,31 @@
 <h2>Danh sách sản phẩm</h2>
 
+<input type="text" placeholder="Tìm sản phẩm" [(ngModel)]="keyword" (input)="applyFilter()" />
+
+<button (click)="showForm = true">Thêm sản phẩm</button>
+
+<app-product-form *ngIf="showForm" [product]="selectedProduct"
+  (submitForm)="selectedProduct ? updateProduct($event) : addProduct($event)" (cancel)="showForm = false">
+</app-product-form>
+
 <table class="product-table">
   <thead>
     <tr>
       <th>Ảnh</th>
       <th>Tên</th>
       <th>Giá</th>
-      <th>Hành động</th>
+      <th colspan="3">Hành động</th>
     </tr>
   </thead>
 
   <tbody>
-    <tr *ngFor="let p of products">
-      <td>
-        <img [src]="p.thumbnail" width="60" />
-      </td>
+    <tr *ngFor="let p of filteredProducts">
+      <td><img [src]="p.thumbnail" width="60" /></td>
       <td>{{ p.title }}</td>
       <td>{{ p.price | number }} đ</td>
-
-      <td>
-        <button (click)="createOrderFromProduct(p)">
-          Tạo đơn
-        </button>
-      </td>
-      <td class="actions">
-        <button class="danger" (click)="deleteProduct(p.id)">
-          Xóa
-        </button>
-      </td>
+      <td><button (click)="addToCart(p)">Thêm vào giỏ</button></td>
+      <td><button (click)="editProduct(p)">Sửa</button></td>
+      <td><button (click)="deleteProduct(p.id)">Xóa</button></td>
     </tr>
   </tbody>
-
-  <button (click)="showForm = true"> Thêm sản phẩm</button>
-    <app-product-form
-      *ngIf="showForm"
-      [product]="selectedProduct"
-      (submitForm)="selectedProduct ? updateProduct($event) : addProduct($event)"
-      (cancel)="showForm = false">
-    </app-product-form>
-
-    <table>
-      <tr *ngFor="let p of products">
-        <td>{{ p.title }}</td>
-        <td>{{ p.price }}</td>
-        <td>
-          <button (click)="editProduct(p)">Sửa</button>
-        </td>
-      </tr>
-    </table>
-
 </table>
