first_cart business logic

--- a/src/app/dashboard/layout/sidebar.component.html
+++ b/src/app/dashboard/layout/sidebar.component.html
@@ -3,7 +3,7 @@
     🏠 Home
   </a>
 
-  <a routerLink="/dashboard/products" routerLinkActive="active">
+  <a *ngIf = "auth.isAdmin()" routerLink="/dashboard/products" routerLinkActive="active"> 
     📦 Products
   </a>
 
