--- a/src/app/dashboard/pages/orders/orders.component.html
+++ b/src/app/dashboard/pages/orders/orders.component.html
@@ -24,6 +24,9 @@
       <td>{{ o.totalPrice | number }} đ</td>
       <td class="status" [ngClass]="o.status">{{ o.status }}</td>
       <td>{{ o.createdAt | date:'short' }}</td>
+      <button (click)="confirmOrder()">Xác nhận</button>
+      <button (click)="cancelOrder()">Huỷ</button>
+
       <td>
         <button [routerLink]="['/dashboard/orders', o.id]">
           Xem chi tiết
