--- a/src/app/dashboard/pages/products/products.component.html
+++ b/src/app/dashboard/pages/products/products.component.html
@@ -1,12 +1,28 @@
-<h2>Danh sách sản phẩm</h2>
+<h2 class="page-title">Danh sách sản phẩm</h2>
 
-<input type="text" placeholder="Tìm sản phẩm" [(ngModel)]="keyword" (input)="applyFilter()" />
+<div class="toolbar">
+  <input
+    class="search-input"
+    type="text"
+    placeholder="Tìm sản phẩm"
+    [(ngModel)]="keyword"
+    (input)="applyFilter()"
+  />
 
-<button (click)="showForm = true">Thêm sản phẩm</button>
+  <!-- CHỈ ADMIN -->
+  <button *ngIf="isAdmin" class="btn btn-add" (click)="showForm = true">
+    + Thêm sản phẩm
+  </button>
+</div>
 
-<app-product-form *ngIf="showForm" [product]="selectedProduct"
-  (submitForm)="selectedProduct ? updateProduct($event) : addProduct($event)" (cancel)="showForm = false">
-</app-product-form>
+<!-- FORM -->
+<div class="form-wrapper" *ngIf="showForm && isAdmin">
+  <app-product-form
+    [product]="selectedProduct"
+    (submitForm)="selectedProduct ? updateProduct($event) : addProduct($event)"
+    (cancel)="showForm = false">
+  </app-product-form>
+</div>
 
 <table class="product-table">
   <thead>
@@ -14,18 +30,32 @@
       <th>Ảnh</th>
       <th>Tên</th>
       <th>Giá</th>
-      <th colspan="3">Hành động</th>
+      <th>Giỏ hàng</th>
+      <th *ngIf="isAdmin" colspan="2">Quản lý</th>
     </tr>
   </thead>
 
   <tbody>
     <tr *ngFor="let p of filteredProducts">
-      <td><img [src]="p.thumbnail" width="60" /></td>
+      <td>
+        <img [src]="p.thumbnail" class="product-img" />
+      </td>
       <td>{{ p.title }}</td>
-      <td>{{ p.price | number }} đ</td>
-      <td><button (click)="addToCart(p)">Thêm vào giỏ</button></td>
-      <td><button (click)="editProduct(p)">Sửa</button></td>
-      <td><button (click)="deleteProduct(p.id)">Xóa</button></td>
+      <td class="price">{{ p.price | number }} đ</td>
+
+      <td>
+        <button class="btn btn-cart" (click)="addToCart(p)">
+          Thêm vào giỏ
+        </button>
+      </td>
+
+      <td *ngIf="isAdmin">
+        <button class="btn btn-edit" (click)="editProduct(p)">Sửa</button>
+      </td>
+
+      <td *ngIf="isAdmin">
+        <button class="btn btn-delete" (click)="deleteProduct(p.id)">Xóa</button>
+      </td>
     </tr>
   </tbody>
 </table>
