first_product-detail

--- a/src/app/dashboard/pages/products/products.component.html
+++ b/src/app/dashboard/pages/products/products.component.html
@@ -33,7 +33,7 @@
         <img [src]="p.thumbnail" class="product-img" />
       </td>
       <td>
-        <a [routerLink]="['/dashboard/products', p.id]" class="product-link" target="_blank">
+        <a [routerLink]="['/product', p.id]" class="product-link" target="_blank">
           {{ p.title }}
         </a>
       </td>
