--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,29 +8,15 @@
     <form>
       <div class="mb-3">
         <label>Username</label>
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="username"
-          name="username"
-        >
+        <input type="text" class="form-control" [(ngModel)]="username" name="username">
       </div>
 
       <div class="mb-3">
         <label>Password</label>
-        <input
-          type="password"
-          class="form-control"
-          [(ngModel)]="password"
-          name="password"
-          required
-        >
+        <input type="password" class="form-control" [(ngModel)]="password" name="password" required>
       </div>
 
-      <button
-        type="button"
-        class="btn btn-primary w-100 mb-3"
-        (click)="onLogin()">
+      <button type="button" class="btn btn-primary w-100 mb-3" (click)="onLogin()">
         Đăng nhập
       </button>
     </form>
