--- a/src/app/dashboard/pages/product-detail/product-detail.component.html
+++ b/src/app/dashboard/pages/product-detail/product-detail.component.html
@@ -30,3 +30,8 @@
     </button>
   </div>
 </div>
+
+  <!-- Comments -->
+  <div *ngIf="!loading && product">
+    <app-comments [productId]="product.id"></app-comments>
+  </div>
