first_order status

--- a/src/app/dashboard/layout/header.component.html
+++ b/src/app/dashboard/layout/header.component.html
@@ -9,19 +9,19 @@
   <!-- MENU -->
   <nav class="main-nav">
     <a routerLink="/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-      Home
+      🏠 Home
     </a>
 
     <a routerLink="/dashboard/products" routerLinkActive="active">
-      Products
+      📦 Products
     </a>
 
     <a routerLink="/dashboard/orders" routerLinkActive="active">
-      Cart
+      🛒 Cart
     </a>
 
     <button (click)="logout()" class="logout-btn">
-      Logout
+      ➡️ Logout
     </button>
 
   </nav>
